Implementing page styling and structure
I work with the HTML Structure, and The styling of the page.

--- a/index.html
+++ b/index.html
@@ -65,45 +65,72 @@
     </header>
 
     <!-- Main -->
-    <section>
-      <h2>Transform your brand</h2>
-      <p>
-        We are a full-service creative agency specializing in helping brands
-        grow fast. Engage your clients through compelling visuals that do most
-        of the marketing for you.
-      </p>
 
-      <a href="#"> Learn more</a>
-    </section>
+    <div class="flex">
+      <section class="flex-item-1 bg-neutral-white p-1">
+        <h2 class="heading-two">Transform your brand</h2>
 
-    <section>
-      <h2>Stand out to the right audience</h2>
+        <p class="body-text-small color-neutral-color-2 m-1">
+          We are a full-service creative agency specializing in helping brands
+          grow fast. Engage your clients through compelling visuals that do most
+          of the marketing for you.
+        </p>
 
-      <p>
-        Using a collaborative formula of designers, researchers, photographers,
-        videographers, and copywriters, we’ll build and extend your brand in
-        digital places.
-      </p>
+        <a href="#" class="content-link">Learn more</a>
+      </section>
 
-      <a href="#"> Learn more</a>
+      <div
+        class="flex-item-1 p-1 content-background-style content-background-img-1"
+      ></div>
+    </div>
+
+    <section class="flex">
+      <div
+        class="flex-item-1 p-1 content-background-style content-background-img-2"
+      ></div>
+
+      <div class="flex-item-1 bg-neutral-white p-1">
+        <h2 class="heading-two">Stand out to the right audience</h2>
+
+        <p class="body-text-small color-neutral-color-2 m-1">
+          Using a collaborative formula of designers, researchers,
+          photographers, videographers, and copywriters, we’ll build and extend
+          your brand in digital places.
+        </p>
+
+        <a href="#" class="content-link">Learn more</a>
+      </div>
     </section>
 
     <!-- Service offer -->
-    <section>
-      <h2>Graphic design</h2>
-      <p>
-        Great design makes you memorable. We deliver artwork that underscores
-        your brand message and captures potential clients’ attention.
-      </p>
-    </section>
+    <div class="flex">
+      <section
+        class="flex-item-1 content-background-style content-background-img-3"
+      >
+        <div class="content-container">
+          <h2 class="heading-two text-center">Graphic design</h2>
 
-    <section>
-      <h2></h2>
-      <p>
-        Increase your credibility by getting the most stunning, high-quality
-        photos that improve your business image.
-      </p>
-    </section>
+          <p class="body-text-small text-center">
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
+      </section>
+
+      <section
+        class="flex-item-1 content-background-style content-background-img-4"
+      >
+        <div class="content-container">
+          <h2 class="heading-two text-center">Photography</h2>
+
+          <p class="body-text-small text-center">
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
+      </section>
+    </div>
 
     <!-- Testimonials -->
     <section>
